--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -67,54 +67,22 @@ jobs:
           retention-days: 1
 
   releasetest:
-    name: Test Release
+    name: Test Release / ${{matrix.shell-pkg}}
     needs: releasebuildcheck
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        shell: [
+          {"shell-pkg": "bash", "shell-bin": "/bin/bash"},
+          {"shell-pkg": "zsh", "shell-bin": "/bin/zsh"},
+          {"shell-pkg": "fish", "shell-bin": "/bin/fish"}
+        ]
     container:
       image: "ubuntu:24.04"
     steps:
       - name: Prepare System
-        run: apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install ca-certificates gpg tzdata
-      - name: Download Release
-        uses: actions/download-artifact@v4
-        with:
-          name: swiftly-release-x86_64
-      - name: Download Tests
-        uses: actions/download-artifact@v4
-        with:
-          name: swiftly-tests-x86_64
-      - name: Extract and Run Workflow Tests
-        run: cp swiftly-*.tar.gz /root/swiftly.tar.gz && cp test-swiftly-*.tar.gz /root && cd /root && tar zxf test-swiftly-*.tar.gz && ./test-swiftly -y ./swiftly.tar.gz
-
-  releasetestzsh:
-    name: Test Release ZSH
-    needs: releasebuildcheck
-    runs-on: ubuntu-latest
-    container:
-      image: "ubuntu:24.04"
-    steps:
-      - name: Prepare System
-        run: apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install ca-certificates gpg tzdata zsh && chsh -s /bin/zsh
-      - name: Download Release
-        uses: actions/download-artifact@v4
-        with:
-          name: swiftly-release-x86_64
-      - name: Download Tests
-        uses: actions/download-artifact@v4
-        with:
-          name: swiftly-tests-x86_64
-      - name: Extract and Run Workflow Tests
-        run: cp swiftly-*.tar.gz /root/swiftly.tar.gz && cp test-swiftly-*.tar.gz /root && cd /root && tar zxf test-swiftly-*.tar.gz && ./test-swiftly -y ./swiftly.tar.gz
-
-  releasetestfish:
-    name: Test Release FISH
-    needs: releasebuildcheck
-    runs-on: ubuntu-latest
-    container:
-      image: "ubuntu:24.04"
-    steps:
-      - name: Prepare System
-        run: apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install ca-certificates gpg tzdata fish && chsh -s /bin/fish
+        run: apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install ca-certificates gpg tzdata ${{matrix.shell-pkg}} && chsh -s ${{matrix.shell-bin}}
       - name: Download Release
         uses: actions/download-artifact@v4
         with:
