--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Prepare the action
         run: ./scripts/prep-gh-action.sh --install-swiftly
       - name: Build and Test
-        run: if [ "${{ matrix.container }}" == "redhat/ubi9" ] || [ "${{ matrix.container }}" == "ubuntu:20.04" ]; then swift test --skip HTTPClientTests; else swift test; fi
+        run: if [[ "${{ matrix.container }}" == "redhat/ubi9" || "${{ matrix.container }}" == "ubuntu:20.04" ]]; then swift test --skip HTTPClientTests; else swift test; fi
 
   releasebuildcheck:
     name: Release Build Check
