Make the toolchains directory location configurable (#324)
Using a new environment variable SWIFTLY_TOOLCHAINS_DIR that
follows a similar pattern as SWIFTLY_HOME_DIR and SWIFTLY_BIN_DIR
make it possible for the user to configure the toolchain location
on init in the same way.

On macOS, this level of configuration requires a different approach
to extracting the toolchain whenever the installation location is
anything other than the default. Use the pkgutil utility of macOS
to extract the toolchain in the location specified by the user.
Installing the toolchains outside of the installer in a custom
location means that Xcode may not be able to pick them up easily.
Make a note of that in the init screen so that users are aware.

When using the init `--no-modify-profile` flag the init was skiping
steps like installing the latest toolchain, and emitting the notes
about updating the current shell environment. Separate this logic
so that the user can have these steps performed with the flag.

* Add an E2E test for testing swiftly installation in a custom location

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -94,6 +94,26 @@ jobs:
       - name: Extract and Run Workflow Tests
         run: cp swiftly-*.tar.gz /root/swiftly.tar.gz && cp test-swiftly-*.tar.gz /root && cd /root && tar zxf test-swiftly-*.tar.gz && ./test-swiftly -y ./swiftly.tar.gz
 
+  release-custom-install-test:
+    name: Test Release - Custom Install Location
+    needs: releasebuildcheck
+    runs-on: ubuntu-latest
+    container:
+      image: "ubuntu:24.04"
+    steps:
+      - name: Prepare System
+        run: apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install ca-certificates gpg tzdata
+      - name: Download Release
+        uses: actions/download-artifact@v4
+        with:
+          name: swiftly-release-x86_64
+      - name: Download Tests
+        uses: actions/download-artifact@v4
+        with:
+          name: swiftly-tests-x86_64
+      - name: Extract and Run Workflow Tests
+        run: cp swiftly-*.tar.gz /root/swiftly.tar.gz && cp test-swiftly-*.tar.gz /root && cd /root && tar zxf test-swiftly-*.tar.gz && ./test-swiftly -y --custom-location ./swiftly.tar.gz
+
   formatcheck:
     name: Format Check
     runs-on: ubuntu-latest
