--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -8,4 +8,4 @@
 # (W), PGP key ID and fingerprint (P), description (D), and snail-mail address
 # (S).
 
-* @shahmishal @cmcgee1024
+* @shahmishal @cmcgee1024 @justice-adams-apple @etcwilde
