--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 env:
-  SWIFTLY_BOOTSTRAP_VERSION: 1.0.0
+  SWIFTLY_BOOTSTRAP_VERSION: 1.0.1-dev
 
 jobs:
   soundness:
@@ -32,8 +32,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Prepare the action
         run: ./scripts/prep-gh-action.sh --install-swiftly
-      - name: Swift version
-        run: swift --version
       - name: Build and Test
         run: swift test
         timeout-minutes: 60
