--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -18,7 +18,7 @@ env:
   SWIFTLY_BOOTSTRAP_VERSION: 1.0.0
 
 jobs:
-  buildrelease:
+  buildrelease-linux:
     name: Build Release / Linux x86_64
     runs-on: ubuntu-latest
     container:
@@ -45,7 +45,7 @@ jobs:
           path: .build/docs/**
           if-no-files-found: error
 
-  buildrelease:
+  buildrelease-macos:
     name: Build Release / macOS
     runs-on: [self-hosted, macos, sequoia, ARM64]
     steps:
