Fix the artifact name for test-swiftly

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -131,7 +131,7 @@ jobs:
       - name: Download Tests
         uses: actions/download-artifact@v4
         with:
-          name: swiftly-tests-x86_64
+          name: test-swiftly-linux-x86_64
       - name: Extract and Run Workflow Tests
         run: cp swiftly-*.tar.gz /root/swiftly.tar.gz && cp test-swiftly-*.tar.gz /root && cd /root && tar zxf test-swiftly-*.tar.gz && ./test-swiftly -y ./swiftly.tar.gz
 
@@ -151,7 +151,7 @@ jobs:
       - name: Download Tests
         uses: actions/download-artifact@v4
         with:
-          name: swiftly-tests-x86_64
+          name: test-swiftly-linux-x86_64
       - name: Extract and Run Workflow Tests
         run: cp swiftly-*.tar.gz /root/swiftly.tar.gz && cp test-swiftly-*.tar.gz /root && cd /root && tar zxf test-swiftly-*.tar.gz && ./test-swiftly -y --custom-location ./swiftly.tar.gz
 
