--- a/.github/workflows/nightly_snapshot_check.yml
+++ b/.github/workflows/nightly_snapshot_check.yml
@@ -33,9 +33,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Activate Swiftly
-        run: source /opt/swiftly/env.sh
-      - name: Install Main Snapshot
-        run: swiftly install main-snapshot
+      - name: Prepare the action
+        run: ./scripts/prep-gh-action.sh --install-swiftly --swift-main-snapshot
       - name: Build and Test
-        run: swiftly run +main-snapshot swift test
+        run: swift test
