--- a/.github/workflows/nightly_snapshot_check.yml
+++ b/.github/workflows/nightly_snapshot_check.yml
@@ -8,7 +8,7 @@ env:
   SWIFTLY_BOOTSTRAP_VERSION: 1.0.0
 
 jobs:
-  tests-selfhosted:
+  tests-selfhosted-linux:
     name: Test (Smoke Test - Nightly Swift Toolchain) / ${{ matrix.container }}
     runs-on: ubuntu-latest
     strategy:
@@ -26,3 +26,14 @@ jobs:
         # UBI 9 and Ubuntu 20.04 - See https://github.com/swiftlang/swift/issues/80908
         # UBI 9 - See https://github.com/swiftlang/swift/issues/80909
         run: bash -c 'if [[ "${{ matrix.container }}" == "redhat/ubi9" ]]; then swiftly run +main-snapshot swift build --build-tests; elif [[ "${{ matrix.container }}" == "ubuntu:20.04" ]]; then swiftly run +main-snapshot swift build --build-tests; else swiftly run +main-snapshot swift test; fi'
+
+  tests-selfhosted-macos:
+    name: Test (Smoke Test - Nightly Swift Toolchain) / macOS Sequoia ARM64
+    runs-on: [self-hosted, macos, sequoia, ARM64]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Prepare the action
+        run: ./scripts/prep-gh-action.sh --install-swiftly --swift-main-snapshot
+      - name: Build and Test
+        run: swift test
