--- a/.github/workflows/nightly_snapshot_check.yml
+++ b/.github/workflows/nightly_snapshot_check.yml
@@ -5,7 +5,7 @@ on:
     - cron: '30 3 * * *'
 
 env:
-  SWIFTLY_BOOTSTRAP_VERSION: 1.0.0
+  SWIFTLY_BOOTSTRAP_VERSION: 1.0.1-dev
 
 jobs:
   tests-selfhosted-linux:
