--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
   push:
-    branches: [main]
+    branches: [main, 'release/*']
 
 jobs:
   soundness:
