--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -50,7 +50,7 @@ jobs:
 
   buildrelease-macos:
     name: Build Release / macOS
-    runs-on: [self-hosted, macos, sequoia, ARM64]
+    runs-on: [self-hosted, macos, tahoe, ARM64]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
