Update the macOS Host testing to Tahoe

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -23,8 +23,8 @@ jobs:
       unacceptable_language_check_enabled: true
 
   macos-tests-selfhosted:
-    name: Test (Self Hosted) / macOS Sequoia ARM64
-    runs-on: [self-hosted, macos, sequoia, ARM64]
+    name: Test (Self Hosted) / macOS Tahoe ARM64
+    runs-on: [self-hosted, macos, tahoe, ARM64]
     if: ${{ github.repository == 'swiftlang/swiftly' }}
     strategy:
       fail-fast: false
@@ -85,7 +85,7 @@ jobs:
 
   releasebuildcheckmacos:
     name: Release Build Check / macOS
-    runs-on: [self-hosted, macos, sequoia, ARM64]
+    runs-on: [self-hosted, macos, tahoe, ARM64]
     if: ${{ github.repository == 'swiftlang/swiftly' }}
     steps:
       - name: Checkout repository
